adding landing page images

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@
 		
 	<div style="width:100%;  margin-top:10%; text-align:center">
 		<p style="font:bold 36px/48px Arial, Helvetica, sans-serif; color:#fff;">{{page.description}}</p></div>	
-		<img src="{{ "/assets/images/topgraph.png" | prepend: site.baseurl }}" class="fadeIn fill">
+		<img style="width:100%; z-index:1; top:0px" src="{{ "/assets/images/topgraph.png" | prepend: site.baseurl }}" class="fadeIn fill">
 	</div>
 
 
