--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,4 +1,5 @@
 {% include head.html %}
+
 <!--{% include main_nav.html %}-->
 
 <!--<div class="bs-docs-masthead" id="content">
@@ -23,19 +24,20 @@
 <div style="width:100%; height:100%; display:table; background-color: #3e86c3;
 	position:relative;">
 		
+		{% include nav.html %}
+		
 	<div style="width:100%;  margin-top:10%; text-align:center">
-		<p style="font:bold 36px/48px Arial, Helvetica, sans-serif; color:#fff;">{{page.description}}</p></div>	
-		<img style="width:100%; z-index:1; top:0px" src="{{ "/assets/images/topgraph.png" | prepend: site.baseurl }}" class="fadeIn fill">
+		<p style="font:normal 42px/56px Arial, Helvetica, sans-serif; color:#fff;">{{page.description}}</p></div>	
+		<p><img style="width:100%; z-index:1; margin-top:-300px;" class="fadein" src="{{ "/assets/images/topgraph.png" | prepend: site.baseurl }}" class="fadeIn fill"></p>
+		<p><ul style="text-decoration: none;list-style-type: none;text-align: center;margin: 0 auto 25px auto;padding: 0px;display: table;overflow: hidden;font: small-caps normal 24px/150% Arial, Helvetica, sans-serif">
+			<li style="float: left;margin-left: auto;margin-right: auto;padding-right: 60px;padding-left: 60px;"><img src="{{ "/assets/images/icons/icnGetStarted.png" | prepend: site.baseurl }}"></li>
+			<li style="float: left;margin-left: auto;margin-right: auto;padding-right: 60px;padding-left: 60px;"><img src="{{ "/assets/images/icons/icnDevelopers.png" | prepend: site.baseurl }}"></li>
+			<li style="float: left;margin-left: auto;margin-right: auto;padding-right: 60px;padding-left: 60px;"><img src="{{ "/assets/images/icons/icnAdOps.png" | prepend: site.baseurl }}"></li>		
+		</ul></p>
 	</div>
 
-
-<div class="container bs-docs-container">
-    <div class="row">
-        <div class="col-md-12" role="main">
-            {{content}}
-        </div>
-
-    </div>
 </div>
+
+{% include_relative _layouts/tile.html %}
 
 {% include foot.html %}
