--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -412,3 +412,113 @@ div.pl-doc-entry{
 .prebid-mobile-notice {
     margin-top: 2em;
 }
+
+/* added for redesign */
+
+#buttonBar { 
+	
+	position: absolute
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+	margin-top: -100px;
+	width: 50%;
+	background-color: #ff0000;
+}
+
+#buttonBar ul { 
+	
+	text-decoration: none;
+	list-style-type: none;
+    text-align: center;
+    margin: 0 auto 25px auto;
+    padding: 0px;
+    display: table;
+    overflow: hidden;
+    font: small-caps normal 24px/150% Arial, Helvetica, sans-serif
+}
+
+#tileContainer { 
+	margin: 0;
+	
+}
+
+#leftTile { 
+	
+	float:left;
+	width:50%;
+	overflow:hidden;
+	text-align: center;
+	
+}
+
+
+#rightTile { 
+	float:left;
+	width:50%;
+	overflow:hidden;
+	text-align: center;
+}
+
+#tileContainer p { 
+	
+	font: bold 36px/150% Arial, Helvetica, sans-serif;
+	padding: 50px 50px 0px 50px;
+	text-align: center;
+	color: #FF9933;
+	
+}
+
+#tileContainer img.fadeIn { 
+	
+	-webkit-animation: fadein 5s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 5s; /* Firefox < 16 */
+        -ms-animation: fadein 5s; /* Internet Explorer */
+         -o-animation: fadein 5s; /* Opera < 12.1 */
+            animation: fadein 5s;
+
+}
+
+
+
+/* fade affect */
+
+.fadeIn { 
+	
+	-webkit-animation: fadein 5s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 5s; /* Firefox < 16 */
+        -ms-animation: fadein 5s; /* Internet Explorer */
+         -o-animation: fadein 5s; /* Opera < 12.1 */
+            animation: fadein 5s;
+
+}
+
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
