--- a/_layouts/tile.html
+++ b/_layouts/tile.html
@@ -1,20 +1,55 @@
 
-
-
-
-<div id="tileContainer">
+	
+<!--<div id="tileContainer">
+	
 	<div id="leftTile">
-		
-		
-		<p>{{page.title}}</p><img src="{{ "/assets/images/icons/icnMonetization.png" | prepend: site.baseurl }}" class="fadeIn">
-		
-		
-		
+		<p class="title">{{page.subHeaders[0]}}</p>
+		<img src="{{ "/assets/images/icons/icnMonetization.png" | prepend: site.baseurl }}" class="fadeIn">
 	</div>
 	
 	<div id="rightTile">
-		<p>Use It Everywhere</p><img src="{{ "/assets/images/icons//icnMultiPlatform.png" | prepend: site.baseurl }}" class="fadeIn">
-		
+		<p class="title">{{page.subHeaders[1]}}</p>
+		<img src="{{ "/assets/images/icons/icnMultiPlatform.png" | prepend: site.baseurl }}" class="fadeIn">
 	</div>
+	
 </div>
+
+<div id="tileContainer">
+	
+	<div id="leftTile">
+		<p class="title">{{page.subHeaders[2]}}</p>
+		<img src="{{ "/assets/images/icons/icnEasyInstall.png" | prepend: site.baseurl }}" class="fadeIn">
+	</div> 
+	
+	<div id="rightTile">
+		<p class="title">{{page.subHeaders[3]}}</p>
+		<img src="{{ "/assets/images/icons/icnOpenSource.png" | prepend: site.baseurl }}" class="fadeIn">
+	</div> 
+	
+</div>-->
+
+<div class="grid" style="margin-top:10px; display:grid; grid-template-columns: auto auto; grid-template-rows: auto auto;grid-gap: 1em;">
+	
+	<div class="module" style="text-align: center;">
+		<p style="font: bold 26px/52px Arial, Helvetica, sans-serif;padding: 50px 50px 0px 50px;margin-bottom: 20px;text-align: center;color: #FF9933;">{{page.subHeaders[0]}}</p>
+		<img src="{{ "/assets/images/icons/icnMonetization.png" | prepend: site.baseurl }}" class="fadeIn">
+	</div>
+	
+	<div class="module" style="text-align: center;">
+		<p style="font: bold 26px/52px Arial, Helvetica, sans-serif;padding: 50px 50px 0px 50px;margin-bottom: 20px;text-align: center;color: #FF9933;">{{page.subHeaders[1]}}</p>
+		<img src="{{ "/assets/images/icons/icnMultiPlatform.png" | prepend: site.baseurl }}" class="fadeIn">
+	</div>
+	
+	<div class="module" style="text-align: center;">
+		<p style="font: bold 26px/52px Arial, Helvetica, sans-serif;padding: 50px 50px 0px 50px;margin-bottom: 20px;text-align: center;color: #FF9933;">{{page.subHeaders[2]}}</p>
+		<img src="{{ "/assets/images/icons/icnEasyInstall.png" | prepend: site.baseurl }}" class="fadeIn">
+	</div>
+	
+	<div class="module" style="text-align: center;">
+		<p style="font: bold 26px/52px Arial, Helvetica, sans-serif;padding: 50px 50px 0px 50px;margin-bottom: 20px;text-align: center;color: #FF9933;">{{page.subHeaders[3]}}</p>
+		<img src="{{ "/assets/images/icons/icnOpenSource.png" | prepend: site.baseurl }}" class="fadeIn">
+	</div>
+  
+</div>
+	
 
