--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -462,7 +462,7 @@ div.pl-doc-entry{
 
 #tileContainer p { 
 	
-	font: bold 36px/150% Arial, Helvetica, sans-serif;
+	font: normal 24px/48px Arial, Helvetica, sans-serif;
 	padding: 50px 50px 0px 50px;
 	text-align: center;
 	color: #FF9933;
