--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,7 @@
 		
 	<div style="width:100%;  margin-top:10%; text-align:center">
 		<p style="font:normal 42px/56px Arial, Helvetica, sans-serif; color:#fff;">{{page.description}}</p></div>	
-		<p><img style="width:100%; z-index:1; margin-top:-300px;" class="fadein" src="{{ "/assets/images/topgraph.png" | prepend: site.baseurl }}" class="fadeIn fill"></p>
+		<p><img style="width:100%; z-index:1; margin-top:-300px;" class="fadein" src="{{ "/assets/images/topgraph.png" | prepend: site.baseurl }}" class="fadeIn fill"  alt="Prebid Graph Image"></p>
 		<p><ul style="text-decoration: none;list-style-type: none;text-align: center;margin: 0 auto 25px auto;padding:0 0 50px 0;display: table;overflow: hidden;font: small-caps normal 24px/150% Arial, Helvetica, sans-serif">
 			<li style="float: left;margin-left: auto;margin-right: auto;padding-right: 60px;padding-left: 60px;"><img src="{{ "/assets/images/icons/icnGetStarted.png" | prepend: site.baseurl }}"></li>
 			<li style="float: left;margin-left: auto;margin-right: auto;padding-right: 60px;padding-left: 60px;"><img src="{{ "/assets/images/icons/icnDevelopers.png" | prepend: site.baseurl }}"></li>
