--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,9 +1,9 @@
 
-<div>
+<div id="top-nav">
 	
-	<img src="{{ "/assets/images/prebid_white_icon_200x35.png" | prepend: site.baseurl }}" class="fadeIn logo" style="padding: 25px 0 0 25px; display: block; position: absolute; top: 10px; left: 50px;">
+	<img src="{{ "/assets/images/prebid_white_icon_200x35.png" | prepend: site.baseurl }}" class="fadeIn logo" >
 	
-	<ul style="text-decoration: none; list-style-type: none; margin: 0; padding: 0 0 0 0; overflow: hidden; font: small-caps normal 24px/150% Arial, Helvetica, sans-serif">
+	<ul>
 		
 		<li></li>
 		
@@ -12,21 +12,22 @@
 		{% for tag in page.tags %}
 			{% if count == 0 %}			
 				
-				<li class="fadeIn" style="float: left; padding-left: 335px; padding-right: 80px; padding-top: 35px; color: #fff;">{{tag}}</li>
+				<li class="fadeIn first-item">{{tag}}</li>
 				
 			{% else %}
 			
-				<li class="fadeIn" style="float: left; padding-right: 80px; color: #fff; padding-top: 35px">{{tag}}</li>
+				<li class="fadeIn">{{tag}}</li>
 			
 			{% endif %}
 			{% assign count = count | plus: 1 %}
 			
 		{% endfor %}
 		
-		
+			<li class="fadeIn"><a href="search.html" style="color:#ffffff;">Search</a></li>
 		
 	</ul>
 	
+		
 	
 </div>
 	
