--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -141,13 +141,13 @@
           <!-- Wrapper for slides -->
           <div class="carousel-inner">
             <div class="item active">
-              <images src="/assets/images/pb_slide01.png" alt="">
+              <img src="/assets/images/pb_slide01.png" alt="">
             </div>
             <div class="item">
-              <images src="/assets/images/pb_slide02.png" alt="">
+              <img src="/assets/images/pb_slide02.png" alt="">
             </div>
             <div class="item">
-              <images src="/assets/images/pb_slide03.png" alt="">
+              <img src="/assets/images/pb_slide03.png" alt="">
             </div>
           </div>
         </div>
@@ -211,5 +211,5 @@
   <script src="lib/easing/easing.min.js"></script>
 
   <!-- Template Main Javascript File -->
-  <script src="js/main.js"></script>
+  <script src="/assets/js/main.js"></script>
 
