Fixing layout for all phone sizes

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,8 +1,10 @@
 {% include head.html %}
 
 <!--{% include main_nav.html %}-->
-
+  
 <!-- Fixed navbar -->
+  
+  <!-- Fixed navbar -->
   <div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
@@ -15,7 +17,9 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#" class="smoothscroll">Products</a></li>
+          <li>
+          	<a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Products</a>
+          </li>
           <li><a href="#" class="smoothscroll">Support</a></li>
           <li><a href="#" class="smoothscroll">Download</a></li>
           <li><a href="#" class="smoothscroll">About</a></li>
@@ -26,6 +30,11 @@
       <!--/.nav-collapse -->
     </div>
   </div>
+  
+  	
+  <div class="subnav">
+		</div>
+  
   
   <div id="headerwrap">
 	  <div class="row">
@@ -172,12 +181,7 @@
                     <li>
                         <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=prebid&amp;repo=Prebid.js&amp;type=fork&amp;count=true" width="90" height="20" title="Fork on GitHub"></iframe>
                     </li>
-                 
-
-                
-                    <li>
-                        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://prebid.org" data-count="horizontal" data-via="" data-text="Prebid" data-hashtags="prebidjs">Tweet</a>
-                    </li>
+                                     
             </ul>
         </div>
         
