Added drop down menus

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,9 +37,10 @@
     </style>
 
     <script src="{{site.baseurl}}/assets/js/jquery.min.js"></script>
-    <script src="{{site.baseurl}}/assets/js/bootstrap.min.js"></script>
+    <script src="{{site.baseurl}}/assets/js/bootstrap.js"></script>
     <script src="{{site.baseurl}}/assets/js/bootbox.min.js"></script>
     <script src="{{site.baseurl}}/assets/js/docs.min.js"></script>
+    <script src="{{site.baseurl}}/assets/js/easing.min.js"></script>
     <script src="{{site.baseurl}}/assets/js/main.js"></script>
     <script type="text/javascript" src="{{site.baseurl}}/assets/js/pbjs_home.js"></script>
 </head>
