--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,6 +80,10 @@ hr {
   padding: 0;
 }
 
+.navbar { 
+	z-index:100
+}
+
 .navbar-default {
   background-color: #3498db;
   border-color: transparent;
@@ -100,9 +104,19 @@ hr {
   background: #fff;
 }
 
-.navbar-search { 
-	
+navbar-brand{
+	float:left;
+	height:50px;
+	padding:15px 30px;
+	font-size:18px;
+	line-height:20px
+	background-color:#ff0000;
 }
+
+/*dropdown*/
+
+
+
 
 /* Helpers */
 
@@ -123,14 +137,14 @@ i {
 }
 
 /* HeaderWrap */
-
+/*#3e86c3;*/
 #headerwrap {
   background: url(../images/topgraph.png) no-repeat center top; 
   position: relative;
   background-color: #3e86c3;
   background-size: cover;
-  margin-top: 0px;
-  padding-top: 40px;
+  margin-top: -20px;
+  padding-top: 0px;
   height:100vh;
   background-attachment: scroll;
   background-position: 0px 0px;
@@ -145,12 +159,13 @@ i {
   -moz-background-size: cover;
   -o-background-size: cover;
   text-align: center;
+  z-index:1
 }
 
 
 #headerwrap h1 {
   text-align: center;
-  margin-top: 60px;
+  margin-top: 20px;
   margin-bottom: 15px;
   color: white;
   font-size: 45px;
@@ -160,7 +175,7 @@ i {
 
 #headerwrap h2 {
   text-align: center;
-  margin: 60px 200px 15px 200px;
+  margin: 20px 200px 15px 200px;
   color: white;
   font-size: 35px;
   font-weight: 300;
@@ -191,8 +206,6 @@ i {
 	padding-left: 18%;
 	font-size: 24px;
 }
-
-
 
 #headerwrap img { 
 	width: 100px;
