Made navbar fixed

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@
   </div>
 -->
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
 	  
 	  <div class="navbar-header">
