--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,6 @@ p {
 }
 
 /* Links */
-
 a {
   color: #3498db;
   word-wrap: break-word;
@@ -104,11 +103,30 @@ hr {
   background: #fff;
 }
 
+/* dropdown*/
 
-/*dropdown*/
-
-
-
+.dropdown-submenu {
+  position: relative;
+}
+.dropdown-submenu > .dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -6px;
+  margin-left: -1px;
+}
+.dropdown-submenu:hover > .dropdown-menu {
+  display: block;
+}
+.dropdown-submenu:hover > a:after {
+  border-left-color: #fff;
+}
+.dropdown-submenu.pull-left {
+  float: none;
+}
+.dropdown-submenu.pull-left > .dropdown-menu {
+  left: -100%;
+  margin-left: 10px;
+}
 
 /* Helpers */
 
